HAR-36: Update swagger.
